--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "reactjs-popup": "^2.0.6",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
